--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,14 @@ dependencies:
   geolocator: ^8.0.3
   geocoding: ^2.0.2
   image_picker: ^0.8.4+11
+  font_awesome_flutter: ^9.2.0
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.11
+  firebase_storage: ^10.2.9
+  cloud_firestore: ^3.1.10
+  shared_preferences: ^2.0.13
+  fluttertoast: ^8.0.9
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
@@ -26,6 +34,9 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/content_img/
+    - assets/images/profile_page_img/
+    - assets/images/user_img/
 
   fonts:
     - family: Billabong
