--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   shared_preferences: ^2.0.13
   fluttertoast: ^8.0.9
   cached_network_image: ^3.2.0
+  device_info_plus: ^3.2.2
+  firebase_messaging: ^11.2.11
+  flutter_local_notifications: ^9.4.0
 
 
 dev_dependencies:
